--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -7,8 +7,19 @@
   font-size: 12px;
 }
 
+.para.small-para{
+  font-weight: lighter;
+  font-size: 12px;
+}
+
 .para {
   font-size: 22px;
+  font-weight: 700;
+}
+
+#confirm-button{
+  background-color: rgb(45, 230, 45);
+  color: white;
 }
 
 .confirm {
@@ -32,4 +43,9 @@
 div.text {
   color: green;
   font-size: 28px;
+}
+
+.text .child{
+  color: red;
+  font-size: 14px;
 }
